--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+/*리셋코드*/
 * {
   margin: 0;
   padding: 0;
@@ -7,10 +9,7 @@ li {
   list-style: none;
 }
 
-img,
-iframe,
-input,
-a {
+img, iframe, input, a {
   vertical-align: top;
 }
 
@@ -71,7 +70,7 @@ header .inner {
   padding: 12px 10px;
   font-size: 15px;
   line-height: 20px;
-  color: #4e5768;
+  color: #4e5968;
   border-radius: 8px;
 }
 #gnb a:hover {
@@ -104,7 +103,7 @@ header .inner {
   color: #b0b8c1;
 }
 #lang li:nth-child(2) {
-  padding: 10px 0;
+  padding: 9px 0;
   line-height: 20px;
 }
 #lang span {
@@ -118,9 +117,9 @@ header .inner {
 #main_view .bg {
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 #main_view .bg img {
-  position: relative;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -133,7 +132,7 @@ header .inner {
   left: 0;
   width: 100%;
   height: 500px;
-  background: linear-gradient(white, #fff 59px, rgba(255, 255, 255, 0));
+  background: linear-gradient(#FFF, #FFF 59px, rgba(255, 255, 255, 0));
 }
 #main_view .contents {
   position: absolute;
@@ -158,10 +157,161 @@ header .inner {
   background: rgba(0, 12, 30, 0.8);
   font-size: 17px;
   color: #fff;
+  font-weight: 500;
   border-radius: 7px;
 }
 #main_view .contents img {
-  vertical-align: -5px;
   width: 24px;
   margin-right: 6px;
+  vertical-align: -5px;
+}
+
+#s1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  background: #f9fafb;
+}
+#s1 p {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.6;
+  color: #191f28;
+  text-align: center;
+  white-space: pre-wrap;
+  word-break: keep-all;
+}
+
+#s2 .inner {
+  height: 1272px;
+  margin: 250px auto 165px;
+  position: relative;
+}
+#s2 .title {
+  opacity: 0;
+  transform: translateY(50px);
+}
+#s2 .title h2 {
+  font-size: 27px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #3182f6;
+  margin-bottom: 30px;
+}
+#s2 .title h3 {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 1.4;
+  color: #191f28;
+}
+#s2 .phone1 {
+  width: 600px;
+  height: 936px;
+  position: absolute;
+  top: 0;
+  right: -104px;
+  border: 1px solid #f00;
+}
+#s2 .phone1 img {
+  width: 100%;
+  height: 100%;
+}
+#s2 .phone1 .view {
+  position: absolute;
+  width: 57%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+#s2 .phone2 {
+  width: 600px;
+  height: 936px;
+  position: absolute;
+  bottom: 0;
+  left: -104px;
+  border: 1px solid #0f0;
+}
+#s2 .phone2 img {
+  width: 100%;
+  height: 100%;
+}
+#s2 .phone2 .view {
+  position: absolute;
+  width: 57%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+#s2 .text {
+  position: absolute;
+  bottom: 166px;
+  right: 30px;
+  font-size: 23px;
+  font-weight: 600;
+  color: #333d4b;
+  line-height: 1.5;
+}
+
+#s3 .inner {
+  margin: 250px auto;
+}
+#s3 .title {
+  margin-bottom: 80px;
+}
+#s3 .title h2 {
+  font-size: 27px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #3182f6;
+  margin-bottom: 30px;
+}
+#s3 .title h3 {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 1.4;
+  color: #191f28;
+}
+#s3 .box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 150px;
+}
+#s3 .box .text {
+  width: calc(50% - 60px);
+  align-content: center;
+  padding-left: 30px;
+}
+#s3 .box .text i {
+  display: inline-block;
+  width: 24px;
+}
+#s3 .box .text p:nth-child(1) {
+  font-size: 20px;
+  line-height: 1.4;
+  color: #3182f6;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+#s3 .box .text p:nth-child(2) {
+  font-size: 40px;
+  line-height: 1.4;
+  color: #333d4b;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+#s3 .box .text p:nth-child(3) {
+  font-size: 22px;
+  line-height: 1.5;
+  color: #6b7684;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+#s3 .box .img {
+  width: calc(50% - 30px);
+}
+#s3 .box .img img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
