--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,10 @@ li {
   list-style: none;
 }
 
-img, iframe, input, a {
+img,
+iframe,
+input,
+a {
   vertical-align: top;
 }
 
@@ -21,7 +24,7 @@ a {
 
 body {
   font-family: "Noto Sans KR", sans-serif;
-  height: 6000px;
+  height: 20000px;
 }
 
 .inner {
@@ -314,4 +317,89 @@ header .inner {
 }
 #s3 .box .img img {
   width: 100%;
+}
+
+#s7 .bg_box {
+  margin: 0 auto;
+  width: 100%;
+  height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("/images/section2_4_big.jpg") no-repeat center center;
+  background-size: auto 100%;
+}
+#s7 .bg_box p {
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #f6fafb;
+}
+#s7 .inner {
+  padding-top: 250px;
+  padding-bottom: 250px;
+}
+#s7 .text1 {
+  margin-bottom: 140px;
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 1.4;
+  color: #191f28;
+}
+#s7 img {
+  width: 100%;
+}
+#s7 .img1 {
+  max-width: 740px;
+  margin: 0 auto 60px;
+}
+#s7 .text2 {
+  margin-bottom: 210px;
+}
+#s7 .t1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #191f28;
+  margin-bottom: 5px;
+}
+#s7 .t2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #b0b8c1;
+  margin-bottom: 24px;
+}
+#s7 .t3 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.5;
+  color: #333d4b;
+}
+#s7 .box1 {
+  display: flex;
+  align-items: center;
+}
+#s7 .img2 {
+  flex-grow: 2;
+  margin-right: 40px;
+}
+#s7 .img3 {
+  flex-grow: 1;
+}
+#s7 .img3 .t3 {
+  margin-top: 35px;
+}
+#s7 .text3 {
+  margin-bottom: 220px;
+}
+#s7 .img4 {
+  margin-bottom: 50px;
+}
+#s7 .text4 {
+  display: flex;
+}
+#s7 .text4 div {
+  flex-shrink: 0;
+  width: 50%;
 }/*# sourceMappingURL=style.css.map */
